--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           </div>
         </div>
       </div>
-      <div></div>
-      <div></div>
+      <div class="container-2"></div>
+      <div class="container-3"></div>
     </header>
 
     <!-- /header -->
