--- a/index.html
+++ b/index.html
@@ -53,8 +53,43 @@
           </div>
         </div>
       </div>
-      <div class="container-2"></div>
-      <div class="container-3"></div>
+      <div class="navbar-static w-70 clearfix">
+        <div class="logo in-bl float-left">
+          <img src="img/logo.svg" alt="logo" />
+        </div>
+        <nav class="float-right">
+          <ul class="menu-inline">
+            <li>
+              <a href="#">
+                Software
+                <span><i class="fas fa-angle-down"></i></span
+              ></a>
+            </li>
+            <li>
+              <a href="#"> Pricing </a>
+            </li>
+            <li>
+              <a href="">
+                Resources
+                <span><i class="fas fa-angle-down"></i></span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Partners
+                <span><i class="fas fa-angle-down"></i></span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                About
+                <span><i class="fas fa-angle-down"></i></span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="container-3 w-70"></div>
     </header>
 
     <!-- /header -->
