--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="#" class="btn">Log In</a>
               </div>
               <div class="in-bl">
-                <a href="#" class="btn">GetHubspotFree</a>
+                <a href="#" class="btn btn-orange">GetHubspotFree</a>
               </div>
             </div>
           </div>
@@ -89,7 +89,21 @@
           </ul>
         </nav>
       </div>
-      <div class="container-3 w-70"></div>
+      <div class="jumbotron">
+        <div class="content-jumbotron w-70">
+          <h1 class="title-jumbotron">There's a better way to grow.</h1>
+          <p class="text-jumbotron">
+            Marketing, sales, and service software that helps your business grow
+            without compromise. Because "good for the business" should also mean
+            "good for the customer".
+          </p>
+          <div>
+            <a href="#" class="btn in-bl btn-bigger btn-orange"
+              >GetHubspotFree</a
+            >
+          </div>
+        </div>
+      </div>
     </header>
 
     <!-- /header -->
