impostazione primo box main

--- a/index.html
+++ b/index.html
@@ -91,17 +91,21 @@
       </div>
       <div class="jumbotron">
         <div class="content-jumbotron w-70">
-          <h1 class="title-jumbotron">There's a better way to grow.</h1>
-          <p class="text-jumbotron">
+          <h1 class="title-jumbotron w-50">There's a better way to grow.</h1>
+          <p class="text-jumbotron w-50">
             Marketing, sales, and service software that helps your business grow
             without compromise. Because "good for the business" should also mean
             "good for the customer".
           </p>
-          <div>
+          <div class="w-50">
             <a href="#" class="btn in-bl btn-bigger btn-orange"
               >GetHubspotFree</a
             >
           </div>
+          <p class="last-text-jumbotron">
+            Get started with <span class="uppercase">Free</span> tools, and
+            upgrade as you grow.
+          </p>
         </div>
       </div>
     </header>
@@ -111,182 +115,29 @@
     <!-- main -->
 
     <main>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, ab?
-        Minima eum doloremque magni totam quaerat incidunt enim officiis
-        cupiditate earum tempore possimus vitae expedita debitis ullam iusto
-        exercitationem, quas cum atque obcaecati qui eaque. Eos itaque eius
-        cumque praesentium exercitationem laboriosam, voluptatum iusto
-        reiciendis cupiditate corporis, distinctio necessitatibus in ab? Quia
-        quod officiis error autem repudiandae odit praesentium exercitationem?
-        Accusamus dolores odit eius quos aliquam totam molestiae aspernatur quo?
-        Tempora quia earum laudantium, sed doloribus recusandae aut deserunt
-        facilis quisquam, commodi non quos aspernatur quae veritatis. Accusamus
-        vel vero obcaecati distinctio nam molestiae quidem inventore! Ullam
-        cumque assumenda corrupti rerum sequi eveniet totam quisquam magnam
-        velit voluptas vitae voluptatem dolorum praesentium cupiditate saepe, et
-        ea expedita vel ratione accusamus atque possimus nam asperiores eos.
-        Provident quidem sapiente nostrum! Recusandae in possimus voluptates
-        nesciunt nam quidem, mollitia tempore dolorum reiciendis. Voluptatem
-        fugiat sed corrupti deleniti aliquid explicabo eaque eligendi corporis
-        reiciendis nihil officia culpa unde, error minima, quae aperiam possimus
-        repudiandae veritatis dolorum cumque iure nemo tempore adipisci at.
-        Ratione consequuntur aut corrupti facere illum dolores nobis quasi
-        ducimus, excepturi repellat consequatur veniam architecto dolorum
-        voluptatibus numquam assumenda tempore maiores vitae necessitatibus ipsa
-        officia quos labore vel. Voluptate iste placeat ullam aliquam obcaecati
-        illum accusamus perspiciatis eum nobis quo ut deleniti a ipsam, officiis
-        perferendis consequuntur ducimus facere eveniet sapiente cupiditate sit
-        debitis. Nam molestiae alias officiis suscipit consectetur inventore
-        ratione magnam dignissimos laborum earum iusto asperiores nihil
-        voluptates animi modi dolorum, ullam nobis cum quae dicta adipisci quas
-        ea. Nemo assumenda veniam repellat nam accusamus ut et, aspernatur
-        tempora error laboriosam veritatis minima autem enim totam a atque
-        suscipit. Pariatur repudiandae sed illum quisquam quod dignissimos,
-        provident, possimus omnis in ipsam ex corrupti facilis. Et nemo culpa ab
-        facilis doloribus dolorum eum cum magni ducimus, vitae vero cumque. Iure
-        cupiditate dolor necessitatibus enim alias ullam placeat quasi aliquam
-        cum rerum recusandae facilis, minima dolore harum quis. Beatae vero
-        nihil nesciunt quis aliquam voluptate excepturi hic recusandae
-        praesentium necessitatibus atque architecto nulla corporis, saepe
-        accusamus voluptatibus distinctio sequi amet vitae alias dolores
-        doloremque id. Temporibus maxime deleniti itaque asperiores maiores
-        doloremque atque mollitia, nam velit alias architecto dolore blanditiis
-        repudiandae tempore minima necessitatibus quae non error sequi veritatis
-        dolorem quod enim cum molestiae! Harum ad in amet minus. Illo error
-        dolorem quae hic earum quo adipisci voluptatibus! Molestiae quae dolores
-        praesentium tempore optio expedita rerum aliquid quos magni, vitae
-        dolor. Consequatur fugiat atque facilis, culpa molestias dignissimos,
-        iusto libero cumque accusantium natus quidem labore ea quasi aliquam,
-        delectus ex magnam! Accusamus quae ipsa pariatur et corrupti qui
-        reprehenderit velit, debitis temporibus eum, architecto saepe error
-        illum. Ullam, quam. Accusantium placeat quam eaque, eligendi expedita
-        molestiae cum id molestias quasi recusandae temporibus voluptate
-        laboriosam, delectus pariatur rem voluptatem animi reprehenderit
-        assumenda et sint deleniti dicta explicabo! Architecto ab dolorem ad
-        maxime aut voluptate nam quasi qui eaque totam neque, accusantium
-        repellat dicta distinctio labore commodi repellendus ipsa natus
-        exercitationem repudiandae a. Ullam eius mollitia, maiores dolorem nemo
-        sint quos debitis quia.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis et
-        repellendus dicta pariatur iste, totam architecto voluptatibus commodi
-        dignissimos sapiente omnis expedita nemo soluta sunt laboriosam, facilis
-        nesciunt voluptatem blanditiis tempore, est deserunt reprehenderit!
-        Deleniti rem porro minima neque facilis laborum quae animi corrupti at
-        possimus odit, dolorem dolor ullam aperiam exercitationem officiis vero!
-        Voluptates architecto alias quos illum eligendi. In nostrum ullam ab
-        cupiditate fugit optio quo corporis adipisci dolor aperiam quam
-        voluptate mollitia maiores repellendus pariatur expedita quia, at nulla
-        aliquam veritatis fugiat illum? Distinctio porro dolorum iure? Pariatur,
-        vitae voluptates. Consequatur voluptates tempore veritatis sed,
-        perspiciatis veniam qui dolores recusandae dolorem laborum! Rerum
-        delectus quod sequi est omnis. Nihil cumque dignissimos repellendus?
-        Repellendus, reiciendis, aliquam omnis praesentium architecto
-        dignissimos consectetur iste aliquid amet labore voluptates aperiam
-        dolores ut voluptate! Expedita libero, omnis, commodi quia unde id vel
-        dolores placeat architecto, maiores minima sunt quo quaerat corporis
-        quasi inventore amet quam? Cum laborum sapiente error eos corrupti
-        consectetur placeat perspiciatis, ex explicabo similique magnam alias
-        totam amet eum voluptatum adipisci quo natus, id inventore perferendis
-        ea voluptates fugit voluptas? Dignissimos, debitis nihil, enim cumque
-        accusantium ducimus molestiae, illum quisquam placeat incidunt eaque
-        natus. Eligendi fugit doloribus placeat ipsum dignissimos dolores, odio
-        dolor laborum quam quasi expedita at quibusdam ipsam voluptatem
-        voluptates, obcaecati asperiores molestiae, qui unde excepturi delectus.
-        Praesentium esse sint asperiores laboriosam repellat dolore tempora
-        pariatur suscipit cum, mollitia repellendus quam, ipsa consectetur a ab
-        eum quia, aspernatur eligendi et consequuntur sit! Fuga veniam dolor
-        maiores mollitia repellat! Dolorum eius voluptates facere amet officiis
-        ratione in reprehenderit architecto repellat, nemo quam quaerat eligendi
-        autem omnis cum excepturi dolorem earum quos ipsam odio error,
-        aspernatur maiores culpa natus! Unde natus tempore cupiditate
-        praesentium aliquam aperiam soluta dolores nostrum laudantium quo! Est,
-        sit laborum vero iste magnam voluptatem dicta reiciendis harum possimus
-        pariatur eveniet perferendis aliquid dolorem inventore alias quo impedit
-        expedita accusantium iure cum maiores repudiandae. Labore, qui? Iusto
-        molestiae reprehenderit error beatae officia eligendi maxime eos velit
-        id necessitatibus repellendus praesentium voluptatum nesciunt vero
-        doloribus illum voluptas molestias excepturi consequuntur, corrupti
-        deserunt voluptate assumenda. Nisi fugiat eaque dolores quisquam commodi
-        beatae excepturi perferendis porro. Sapiente quia, in tempora saepe
-        aperiam autem corporis veritatis minima dolorem libero natus eveniet sit
-        voluptates delectus perferendis eligendi sint necessitatibus ea! Natus
-        fugiat nesciunt rem fuga in veniam praesentium temporibus sunt, ab nobis
-        eligendi. Tempore voluptatibus deserunt beatae, culpa earum ullam odit
-        atque minus dolorum dignissimos nam velit. Officia necessitatibus vel
-        ipsam nulla beatae nemo voluptatem aut asperiores enim dolor sapiente
-        quos ullam eos consectetur harum voluptatibus, deserunt minus quisquam
-        facilis fugiat ipsum impedit. Officia, beatae eos! Nisi rem
-        necessitatibus ducimus, nihil amet atque, praesentium velit voluptate
-        autem deserunt a itaque quos et quam? Repellendus quisquam itaque
-        nostrum, dignissimos eaque repellat officia voluptates repudiandae
-        quibusdam hic culpa autem perspiciatis nobis adipisci id quo. Vero
-        praesentium voluptates odio nobis libero nostrum pariatur dolore.
-        Consectetur animi cupiditate magni, quis velit rerum quos! Minus
-        consectetur, perspiciatis quibusdam mollitia suscipit repellat aperiam
-        libero corporis sunt dignissimos?
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur
-        voluptatibus ratione ex architecto expedita quibusdam delectus fuga, eos
-        numquam nam perferendis illum, magni ipsum ea temporibus distinctio
-        praesentium sequi quae. Molestiae, sequi quam iste dolor accusantium
-        pariatur? Nam explicabo suscipit dignissimos iure id repudiandae dolores
-        officia doloremque eaque facilis maiores excepturi quis, rerum,
-        distinctio incidunt tempore assumenda hic! Cupiditate labore corporis,
-        voluptatum sequi temporibus aliquam provident commodi repellendus illo
-        iure modi quae vitae necessitatibus. Fugiat voluptatem optio quod sunt
-        sapiente at recusandae quae quos. Neque ducimus commodi consequuntur.
-        Fugit ipsum fugiat dolorum tempore temporibus adipisci ad? A dolore,
-        doloremque, eveniet non dolorem recusandae reiciendis vitae, et rerum
-        nulla voluptatibus consequuntur deleniti quasi saepe nobis dignissimos
-        maiores. Quisquam veniam excepturi error illo culpa quam ducimus quo
-        sint maiores adipisci dignissimos commodi, iste tempora porro voluptates
-        placeat officiis ullam. Sed dolores reprehenderit quidem eveniet aperiam
-        dolore pariatur veritatis. Animi atque praesentium officia adipisci
-        laborum tempore iusto placeat fugiat, laudantium minima cumque, natus
-        eligendi, nisi rem minus ipsum nihil? Dolore, vero quis beatae
-        perspiciatis corrupti deleniti sapiente et voluptate quod cupiditate
-        veniam nisi ex! Adipisci labore provident fugiat accusantium. Rerum ipsa
-        similique libero reiciendis magnam aperiam, sequi labore nisi dolorum
-        alias ad atque eligendi distinctio officia quas saepe vel eos neque rem,
-        suscipit quo autem facere. Voluptates ducimus, sapiente quasi inventore
-        laborum repellendus error consequuntur quas, placeat voluptate ratione
-        neque consectetur cumque excepturi dignissimos totam minus ipsam
-        perspiciatis. Expedita possimus beatae ipsa iure quia pariatur molestias
-        rem, quaerat ab vel officia blanditiis cum non, qui ad vero nemo neque
-        eligendi, eveniet aliquid similique nostrum tempora. Maxime, culpa,
-        libero assumenda cumque odit voluptates qui illo inventore quibusdam
-        accusamus est beatae error aperiam aspernatur sed rerum, illum expedita
-        voluptate? Ratione, architecto quas error deleniti, distinctio unde
-        temporibus, corrupti alias nesciunt magni quo. Impedit eos ipsum
-        voluptatum dolor perferendis. In cum mollitia aut perferendis deleniti
-        qui, laboriosam nostrum ducimus adipisci veritatis consectetur,
-        dignissimos placeat ut deserunt natus ipsa illum asperiores. Beatae
-        dolorem alias ipsa incidunt commodi est ex accusantium vel quaerat
-        dolore possimus natus consequatur iste, nostrum doloremque vitae eveniet
-        eius maxime provident labore aspernatur in repellat? Autem iste tenetur
-        natus distinctio minima modi velit soluta. Nihil perspiciatis eligendi
-        odio esse rerum dolores error omnis? Veritatis perferendis temporibus
-        enim? Nesciunt, nobis reprehenderit doloremque quod consequatur non quas
-        molestiae. Sapiente voluptas illo inventore ab molestias tempore
-        doloribus autem perspiciatis, voluptatibus soluta architecto vitae
-        debitis ea laboriosam alias! Ipsam, delectus quaerat ut hic blanditiis,
-        aperiam ea soluta adipisci cumque sit, excepturi unde earum molestiae
-        consequatur. Commodi optio repudiandae error! Dicta optio natus deserunt
-        ullam. Ut inventore omnis odio vel voluptate voluptatum quae ea unde.
-        Dolores nobis voluptatem quam, eveniet consequuntur rem hic dolorum
-        saepe laboriosam numquam illum tenetur quaerat earum quos cum quae natus
-        aliquam aspernatur. Eius iure doloribus vero repellendus, quo porro odit
-        autem et dignissimos ex voluptas quia corrupti eveniet eaque
-        consequuntur? Facere, excepturi amet omnis mollitia pariatur quasi totam
-        cupiditate natus, temporibus neque corrupti rem dolores autem
-        praesentium sunt unde qui deserunt. Necessitatibus, illo repellendus!
-      </p>
+      <div class="box-1">
+        <div class="cube">
+          <div class="illustration-cube">
+            <img src="img/cube.webp" alt="cube" />
+          </div>
+          <div class="title-cube">
+            <h2>Powerful Alone. Better Together</h2>
+          </div>
+          <div class="text-cube">
+            <p>
+              HubSpot offers a full stack of software for marketing, sales, and
+              customer service, with a completely free CRM at its core. They're
+              powerful alone - but even better when used together
+            </p>
+          </div>
+        </div>
+        <div class="free w-70 white"></div>
+        <div class="row w-70 clearfix">
+          <div class="col float-left white"></div>
+          <div class="col col-center float-left white"></div>
+          <div class="col float-left white"></div>
+        </div>
+      </div>
     </main>
 
     <!-- /main -->
