primo blocco main impostato

--- a/index.html
+++ b/index.html
@@ -131,7 +131,53 @@
             </p>
           </div>
         </div>
-        <div class="free w-70 white"></div>
+        <div class="free w-70 white">
+          <div class="content-free clearfix">
+            <div class="left-col-free float-left">
+              <div class="image-free">
+                <img src="img/book.svg" alt="book" />
+              </div>
+              <div class="btn-free">
+                <a href="#" class="btn btn-orange btn-bigger">Learn More</a>
+              </div>
+            </div>
+            <div class="right-col-free float-left">
+              <div class="title-free">
+                <h3>Free HubSpot CRM</h3>
+              </div>
+              <div>
+                <p>
+                  Everything you need to organize, track, and build better
+                  relationship with leads and customers. Yes, it's 100% free.
+                  Forever.
+                </p>
+              </div>
+              <h4>Popular Feature</h4>
+              <div>
+                <ul class="menu-no-style">
+                  <li class="in-bl">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Contact Insight</p>
+                  </li>
+                  <li class="in-bl">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Deals</p>
+                  </li>
+                  <li class="in-bl">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Task</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="row w-70 clearfix">
           <div class="col float-left white"></div>
           <div class="col col-center float-left white"></div>
