modifiche primo box main

--- a/index.html
+++ b/index.html
@@ -145,29 +145,29 @@
               <div class="title-free">
                 <h3>Free HubSpot CRM</h3>
               </div>
-              <div>
+              <div class="text-free">
                 <p>
                   Everything you need to organize, track, and build better
                   relationship with leads and customers. Yes, it's 100% free.
                   Forever.
                 </p>
-              </div>
+              </div class="subtitle-free">
               <h4>Popular Feature</h4>
-              <div>
+              <div class="feature-free">
                 <ul class="menu-no-style">
-                  <li class="in-bl">
+                  <li class="in-bl check-list-inline">
                     <span>
                       <i class="fas fa-check-circle check-orange"></i>
                     </span>
                     <p class="in-bl">Contact Insight</p>
                   </li>
-                  <li class="in-bl">
+                  <li class="in-bl check-list-inline">
                     <span>
                       <i class="fas fa-check-circle check-orange"></i>
                     </span>
                     <p class="in-bl">Deals</p>
                   </li>
-                  <li class="in-bl">
+                  <li class="in-bl check-list-inline">
                     <span>
                       <i class="fas fa-check-circle check-orange"></i>
                     </span>
