prima colonna impostata

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </div>
             </div>
             <div class="right-col-free float-left">
-              <div class="title-free">
+              <div class="title-free title-bottom">
                 <h3>Free HubSpot CRM</h3>
               </div>
               <div class="text-free">
@@ -151,8 +151,11 @@
                   relationship with leads and customers. Yes, it's 100% free.
                   Forever.
                 </p>
-              </div class="subtitle-free">
-              <h4>Popular Feature</h4>
+              </div>
+              <div class="subtitle-free">
+                <h4>Popular Feature</h4>
+              </div>
+
               <div class="feature-free">
                 <ul class="menu-no-style">
                   <li class="in-bl check-list-inline">
@@ -179,9 +182,53 @@
           </div>
         </div>
         <div class="row w-70 clearfix">
-          <div class="col float-left white"></div>
-          <div class="col col-center float-left white"></div>
-          <div class="col float-left white"></div>
+          <div class="col col-left float-left green">
+            <div class="content-col">
+              <div class="image-col">
+                <img src="img/buble.svg" alt="buble" />
+              </div>
+              <div class="title-col">
+                <h3>Marketing Hub</h3>
+              </div>
+              <div class="text-col">
+                <p>
+                  Marketing software to help you grow traffic, convert more
+                  visitors, and run complete inbound marketing campaigns at
+                  scale.
+                </p>
+              </div>
+              <div class="subtitle-col">
+                <h4>Popular Feature</h4>
+              </div>
+              <div class="list-col">
+                <ul class="menu-no-style">
+                  <li class="in-bl check-list-inline">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Lead Generation</p>
+                  </li>
+                  <li class="check-list-inline">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Marketing Automation</p>
+                  </li>
+                  <li class="in-bl check-list-inline">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Analytics</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="btn-col">
+                <a href="#" class="btn btn-orange btn-bigger">Learn More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col col-center float-left green"></div>
+          <div class="col col-right float-left green"></div>
         </div>
       </div>
     </main>
