--- a/index.html
+++ b/index.html
@@ -227,8 +227,96 @@
               </div>
             </div>
           </div>
-          <div class="col col-center float-left green"></div>
-          <div class="col col-right float-left green"></div>
+          <div class="col col-center float-left green">
+            <div class="content-col">
+              <div class="image-col">
+                <img src="img/office.svg" alt="office" />
+              </div>
+              <div class="title-col">
+                <h3>Marketing Hub</h3>
+              </div>
+              <div class="text-col">
+                <p>
+                  Marketing software to help you grow traffic, convert more
+                  visitors, and run complete inbound marketing campaigns at
+                  scale.
+                </p>
+              </div>
+              <div class="subtitle-col">
+                <h4>Popular Feature</h4>
+              </div>
+              <div class="list-col">
+                <ul class="menu-no-style">
+                  <li class="in-bl check-list-inline">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Lead Generation</p>
+                  </li>
+                  <li class="check-list-inline">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Marketing Automation</p>
+                  </li>
+                  <li class="in-bl check-list-inline">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Analytics</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="btn-col">
+                <a href="#" class="btn btn-orange btn-bigger">Learn More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col col-right float-left green">
+            <div class="content-col">
+              <div class="image-col">
+                <img src="img/table.svg" alt="table" />
+              </div>
+              <div class="title-col">
+                <h3>Marketing Hub</h3>
+              </div>
+              <div class="text-col">
+                <p>
+                  Marketing software to help you grow traffic, convert more
+                  visitors, and run complete inbound marketing campaigns at
+                  scale.
+                </p>
+              </div>
+              <div class="subtitle-col">
+                <h4>Popular Feature</h4>
+              </div>
+              <div class="list-col">
+                <ul class="menu-no-style">
+                  <li class="in-bl check-list-inline">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Lead Generation</p>
+                  </li>
+                  <li class="check-list-inline">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Marketing Automation</p>
+                  </li>
+                  <li class="in-bl check-list-inline">
+                    <span>
+                      <i class="fas fa-check-circle check-orange"></i>
+                    </span>
+                    <p class="in-bl">Analytics</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="btn-col">
+                <a href="#" class="btn btn-orange btn-bigger">Learn More</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
