--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </div>
         </div>
         <div class="row w-70 clearfix">
-          <div class="col col-left float-left green">
+          <div class="col col-left float-left white">
             <div class="content-col">
               <div class="image-col">
                 <img src="img/buble.svg" alt="buble" />
@@ -227,19 +227,19 @@
               </div>
             </div>
           </div>
-          <div class="col col-center float-left green">
+          <div class="col col-center float-left white">
             <div class="content-col">
               <div class="image-col">
                 <img src="img/office.svg" alt="office" />
               </div>
               <div class="title-col">
-                <h3>Marketing Hub</h3>
+                <h3>Sales Hub</h3>
               </div>
               <div class="text-col">
                 <p>
-                  Marketing software to help you grow traffic, convert more
-                  visitors, and run complete inbound marketing campaigns at
-                  scale.
+                  Time-saving sales software that helps you get deeper insights
+                  into prospects, automate the tasks you hate, and close more
+                  deals faster.
                 </p>
               </div>
               <div class="subtitle-col">
@@ -251,19 +251,19 @@
                     <span>
                       <i class="fas fa-check-circle check-orange"></i>
                     </span>
-                    <p class="in-bl">Lead Generation</p>
+                    <p class="in-bl">Email Tracker</p>
                   </li>
                   <li class="check-list-inline">
                     <span>
                       <i class="fas fa-check-circle check-orange"></i>
                     </span>
-                    <p class="in-bl">Marketing Automation</p>
+                    <p class="in-bl">Meeting Scheduling</p>
                   </li>
                   <li class="in-bl check-list-inline">
                     <span>
                       <i class="fas fa-check-circle check-orange"></i>
                     </span>
-                    <p class="in-bl">Analytics</p>
+                    <p class="in-bl">Email Automation</p>
                   </li>
                 </ul>
               </div>
@@ -272,19 +272,19 @@
               </div>
             </div>
           </div>
-          <div class="col col-right float-left green">
+          <div class="col col-right float-left white">
             <div class="content-col">
               <div class="image-col">
                 <img src="img/table.svg" alt="table" />
               </div>
               <div class="title-col">
-                <h3>Marketing Hub</h3>
+                <h3>Service Hub</h3>
               </div>
               <div class="text-col">
                 <p>
-                  Marketing software to help you grow traffic, convert more
-                  visitors, and run complete inbound marketing campaigns at
-                  scale.
+                  Customer service software to help you connect with customers,
+                  exceed expectations, and turn them into promoters that grow
+                  your business.
                 </p>
               </div>
               <div class="subtitle-col">
@@ -296,19 +296,19 @@
                     <span>
                       <i class="fas fa-check-circle check-orange"></i>
                     </span>
-                    <p class="in-bl">Lead Generation</p>
+                    <p class="in-bl">Tickets</p>
                   </li>
                   <li class="check-list-inline">
                     <span>
                       <i class="fas fa-check-circle check-orange"></i>
                     </span>
-                    <p class="in-bl">Marketing Automation</p>
+                    <p class="in-bl">Customer Feedback</p>
                   </li>
                   <li class="in-bl check-list-inline">
                     <span>
                       <i class="fas fa-check-circle check-orange"></i>
                     </span>
-                    <p class="in-bl">Analytics</p>
+                    <p class="in-bl">Knowledge Base</p>
                   </li>
                 </ul>
               </div>
@@ -316,6 +316,24 @@
                 <a href="#" class="btn btn-orange btn-bigger">Learn More</a>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="box-2">
+        <div class="community w-70">
+          <div class="content-community">
+            <h2>
+              Learn and grow with award-winning support and a thriving community
+              behind you.
+            </h2>
+
+            <p>
+              You don't have to go it alone. Master the inbound methodology and
+              get the most out of your tools with HubSpot's legendary customer
+              support team and a community of thousands of marketing and sales
+              pros just like you.
+            </p>
           </div>
         </div>
       </div>
