--- a/index.html
+++ b/index.html
@@ -323,17 +323,129 @@
       <div class="box-2">
         <div class="community w-70">
           <div class="content-community">
-            <h2>
-              Learn and grow with award-winning support and a thriving community
-              behind you.
-            </h2>
+            <div class="text-community">
+              <h2>
+                Learn and grow with award-winning support and a thriving
+                community behind you.
+              </h2>
 
-            <p>
-              You don't have to go it alone. Master the inbound methodology and
-              get the most out of your tools with HubSpot's legendary customer
-              support team and a community of thousands of marketing and sales
-              pros just like you.
-            </p>
+              <p>
+                You don't have to go it alone. Master the inbound methodology
+                and get the most out of your tools with HubSpot's legendary
+                customer support team and a community of thousands of marketing
+                and sales pros just like you.
+              </p>
+            </div>
+            <div class="table-community">
+              <div class="row-community clearfix">
+                <div class="item float-left">
+                  <div class="content-item">
+                    <div class="image-item">
+                      <img src="img/hands.svg" alt="hands" />
+                    </div>
+                    <div class="title-item">
+                      <h3>150</h3>
+                    </div>
+                    <div class="subtitle-item">
+                      <p>Hubspot user groups</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item float-left">
+                  <div class="content-item">
+                    <div class="image-item">
+                      <img src="img/hands.svg" alt="hands" />
+                    </div>
+                    <div class="title-item">
+                      <h3>150</h3>
+                    </div>
+                    <div class="subtitle-item">
+                      <p>Hubspot user groups</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item float-left">
+                  <div class="content-item">
+                    <div class="image-item">
+                      <img src="img/hands.svg" alt="hands" />
+                    </div>
+                    <div class="title-item">
+                      <h3>150</h3>
+                    </div>
+                    <div class="subtitle-item">
+                      <p>Hubspot user groups</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item float-left">
+                  <div class="content-item">
+                    <div class="image-item">
+                      <img src="img/hands.svg" alt="hands" />
+                    </div>
+                    <div class="title-item">
+                      <h3>150</h3>
+                    </div>
+                    <div class="subtitle-item">
+                      <p>Hubspot user groups</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row-community clearfix">
+                <div class="item float-left">
+                  <div class="content-item">
+                    <div class="image-item">
+                      <img src="img/hands.svg" alt="hands" />
+                    </div>
+                    <div class="title-item">
+                      <h3>150</h3>
+                    </div>
+                    <div class="subtitle-item">
+                      <p>Hubspot user groups</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item float-left">
+                  <div class="content-item">
+                    <div class="image-item">
+                      <img src="img/hands.svg" alt="hands" />
+                    </div>
+                    <div class="title-item">
+                      <h3>150</h3>
+                    </div>
+                    <div class="subtitle-item">
+                      <p>Hubspot user groups</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item float-left">
+                  <div class="content-item">
+                    <div class="image-item">
+                      <img src="img/hands.svg" alt="hands" />
+                    </div>
+                    <div class="title-item">
+                      <h3>150</h3>
+                    </div>
+                    <div class="subtitle-item">
+                      <p>Hubspot user groups</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item float-left">
+                  <div class="content-item">
+                    <div class="image-item">
+                      <img src="img/hands.svg" alt="hands" />
+                    </div>
+                    <div class="title-item">
+                      <h3>150</h3>
+                    </div>
+                    <div class="subtitle-item">
+                      <p>Hubspot user groups</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
