box griglia completato

--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
               </p>
             </div>
             <div class="table-community">
-              <div class="row-community clearfix">
-                <div class="item float-left">
+              <div class="row-community first-row clearfix">
+                <div class="item one float-left">
                   <div class="content-item">
                     <div class="image-item">
                       <img src="img/hands.svg" alt="hands" />
@@ -351,96 +351,96 @@
                     </div>
                   </div>
                 </div>
-                <div class="item float-left">
+                <div class="item two float-left">
                   <div class="content-item">
                     <div class="image-item">
-                      <img src="img/hands.svg" alt="hands" />
+                      <img src="img/blogs.svg" alt="blogs" />
                     </div>
                     <div class="title-item">
-                      <h3>150</h3>
+                      <h3>4.5M</h3>
                     </div>
                     <div class="subtitle-item">
-                      <p>Hubspot user groups</p>
+                      <p>Monthly visits</p>
                     </div>
                   </div>
                 </div>
-                <div class="item float-left">
+                <div class="item three float-left">
                   <div class="content-item">
                     <div class="image-item">
-                      <img src="img/hands.svg" alt="hands" />
+                      <img src="img/academy.svg" alt="academy" />
                     </div>
                     <div class="title-item">
-                      <h3>150</h3>
+                      <h3>155K</h3>
                     </div>
                     <div class="subtitle-item">
-                      <p>Hubspot user groups</p>
+                      <p>Certified professionals</p>
                     </div>
                   </div>
                 </div>
-                <div class="item float-left">
+                <div class="item four float-left">
                   <div class="content-item">
                     <div class="image-item">
-                      <img src="img/hands.svg" alt="hands" />
+                      <img src="img/inbound.svg" alt="inbound" />
                     </div>
                     <div class="title-item">
-                      <h3>150</h3>
+                      <h3>21K</h3>
                     </div>
                     <div class="subtitle-item">
-                      <p>Hubspot user groups</p>
+                      <p>Registered attendees</p>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row-community clearfix">
-                <div class="item float-left">
+                <div class="item one float-left">
                   <div class="content-item">
                     <div class="image-item">
-                      <img src="img/hands.svg" alt="hands" />
+                      <img src="img/connect.svg" alt="connect" />
                     </div>
                     <div class="title-item">
-                      <h3>150</h3>
+                      <h3>200</h3>
                     </div>
                     <div class="subtitle-item">
-                      <p>Hubspot user groups</p>
+                      <p>Integrations</p>
                     </div>
                   </div>
                 </div>
-                <div class="item float-left">
+                <div class="item two float-left">
                   <div class="content-item">
                     <div class="image-item">
-                      <img src="img/hands.svg" alt="hands" />
+                      <img src="img/globe.svg" alt="globe" />
                     </div>
                     <div class="title-item">
-                      <h3>150</h3>
+                      <h3>6</h3>
                     </div>
                     <div class="subtitle-item">
-                      <p>Hubspot user groups</p>
+                      <p>Languages</p>
                     </div>
                   </div>
                 </div>
-                <div class="item float-left">
+                <div class="item three float-left">
                   <div class="content-item">
                     <div class="image-item">
-                      <img src="img/hands.svg" alt="hands" />
+                      <img src="img/followers.svg" alt="followers" />
                     </div>
                     <div class="title-item">
-                      <h3>150</h3>
+                      <h3>2.6M</h3>
                     </div>
                     <div class="subtitle-item">
-                      <p>Hubspot user groups</p>
+                      <p>Social followers</p>
                     </div>
                   </div>
                 </div>
-                <div class="item float-left">
+                <div class="item four float-left">
                   <div class="content-item">
                     <div class="image-item">
-                      <img src="img/hands.svg" alt="hands" />
+                      <img src="img/growth.svg" alt="growth" />
                     </div>
                     <div class="title-item">
-                      <h3>150</h3>
+                      <h3>5K</h3>
                     </div>
                     <div class="subtitle-item">
-                      <p>Hubspot user groups</p>
+                      <p>Profiles and counting</p>
                     </div>
                   </div>
                 </div>
