impostazione (orribile) loghi

--- a/index.html
+++ b/index.html
@@ -449,6 +449,57 @@
           </div>
         </div>
       </div>
+
+      <div class="box-3 w-70">
+        <div class="container-1 w-85 clearfix">
+          <div class="customers float-left">
+            <div class="content-customers">
+              <div class="title-customers">
+                <h2>64,500</h2>
+              </div>
+              <div class="text-customers">
+                <p>
+                  customers in over 100 countries growing their business with
+                  HubSpot
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="logos float-left">
+            <div class="images-logos">
+              <div class="row-images-logo">
+                <div class="logo-item in-bl">
+                  <img src="img/atlasian.webp" alt="atlassian" />
+                </div>
+                <div class="logo-item in-bl">
+                  <img src="img/doordash.webp" alt="doordash" />
+                </div>
+                <div class="logo-item in-bl">
+                  <img src="img/g2crowd.webp" alt="g2crowd" />
+                </div>
+                <div class="logo-item in-bl">
+                  <img src="img/purple.webp" alt="purple" />
+                </div>
+              </div>
+
+              <div class="row-images-logo">
+                <div class="logo-item in-bl">
+                  <img src="img/subaru.webp" alt="subaru" />
+                </div>
+                <div class="logo-item in-bl">
+                  <img src="img/wistia.webp" alt="wistia" />
+                </div>
+                <div class="logo-item in-bl">
+                  <img src="img/classpass.webp" alt="classpass" />
+                </div>
+                <div class="logo-item in-bl">
+                  <img src="img/vmware.webp" alt="vmware" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- /main -->
