--- a/index.html
+++ b/index.html
@@ -499,6 +499,33 @@
             </div>
           </div>
         </div>
+        <div class="container-2 clearfix">
+          <div class="growing float-left">
+            <div class="content-growing">
+              <div class="text-growing">
+                <h2>Start growing with HubSpot Today</h2>
+
+                <p>
+                  With tools to make every part of your process more human and a
+                  support team excited to help you, getting started with inbound
+                  has never been easier.
+                </p>
+              </div>
+              <div class="btn-growing">
+                <a href="#" class="btn btn-orange btn-bigger">GetHubspotFree</a>
+              </div>
+              <div class="last-text-growing">
+                <p>
+                  Get started with FREE tools, or get more with our premium
+                  software.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="image-grow float-left">
+            <img src="img/woman.webp" alt="woman" />
+          </div>
+        </div>
       </div>
     </main>
 
