--- a/index.html
+++ b/index.html
@@ -530,5 +530,61 @@
     </main>
 
     <!-- /main -->
+
+    <footer>
+      <div class="content-footer w-70 text-white clearfix">
+        <div class="col-footer float-left">
+          <div class="title-col-footer">
+            <h5>Increase Your Traffic</h5>
+          </div>
+          <div class="text-col-footer">
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+          </div>
+        </div>
+
+        <div class="col-footer float-left">
+          <div class="title-col-footer">
+            <h5>Increase Your Traffic</h5>
+          </div>
+          <div class="text-col-footer">
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+          </div>
+        </div>
+
+        <div class="col-footer float-left">
+          <div class="title-col-footer">
+            <h5>Increase Your Traffic</h5>
+          </div>
+          <div class="text-col-footer">
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+          </div>
+        </div>
+
+        <div class="col-footer float-left">
+          <div class="title-col-footer">
+            <h5>Increase Your Traffic</h5>
+          </div>
+          <div class="text-col-footer">
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+            <p>Ad Software</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
