impostazione colonne footer

--- a/index.html
+++ b/index.html
@@ -539,10 +539,10 @@
           </div>
           <div class="text-col-footer">
             <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
+            <p>Blog Software</p>
+            <p>SEO Software</p>
+            <p>Social Media Software</p>
+            <p>Content Management System</p>
           </div>
         </div>
 
@@ -551,11 +551,11 @@
             <h5>Increase Your Traffic</h5>
           </div>
           <div class="text-col-footer">
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
+            <p>Find New Prospects</p>
+            <p>Email Tracking</p>
+            <p>Sales Email Template</p>
+            <p>Click to Call Your Leads</p>
+            <p>Email Marketing</p>
           </div>
         </div>
 
@@ -564,11 +564,11 @@
             <h5>Increase Your Traffic</h5>
           </div>
           <div class="text-col-footer">
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
+            <p>Document Tracking Tool</p>
+            <p>Meeting Schedule Tool</p>
+            <p>Sales Automation Tool</p>
+            <p>Lead Management Tool</p>
+            <p>Pipeline Management Tool</p>
           </div>
         </div>
 
@@ -577,11 +577,21 @@
             <h5>Increase Your Traffic</h5>
           </div>
           <div class="text-col-footer">
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
-            <p>Ad Software</p>
+            <p>HubSpot Partners</p>
+            <p>Join a Local User Group</p>
+            <p>Get a Free Website Report</p>
+            <p>HubSpot Templates</p>
+            <p>Free Tools & Generators</p>
+            <div>
+              <a href="#" class="btn in-bl btn-foot">Contact HubSpot Support</a>
+            </div>
+            <div class="social">
+              <span class="in-bl"><i class="fab fa-facebook-f"></i></span>
+              <span class="in-bl"><i class="fab fa-instagram"></i></span>
+              <span class="in-bl"><i class="fab fa-youtube"></i></span>
+              <span class="in-bl"><i class="fab fa-twitter"></i></span>
+              <span class="in-bl"><i class="fab fa-linkedin"></i></span>
+            </div>
           </div>
         </div>
       </div>
