--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
       <div class="content-footer w-70 text-white clearfix">
         <div class="col-footer float-left">
           <div class="title-col-footer">
-            <h5>Increase Your Traffic</h5>
+            <h4>Increase Your Traffic</h4>
           </div>
           <div class="text-col-footer">
             <p>Ad Software</p>
@@ -548,7 +548,7 @@
 
         <div class="col-footer float-left">
           <div class="title-col-footer">
-            <h5>Increase Your Traffic</h5>
+            <h4>Connect With Leads</h4>
           </div>
           <div class="text-col-footer">
             <p>Find New Prospects</p>
@@ -561,7 +561,7 @@
 
         <div class="col-footer float-left">
           <div class="title-col-footer">
-            <h5>Increase Your Traffic</h5>
+            <h4>Close and Manage Leads</h4>
           </div>
           <div class="text-col-footer">
             <p>Document Tracking Tool</p>
@@ -574,7 +574,7 @@
 
         <div class="col-footer float-left">
           <div class="title-col-footer">
-            <h5>Increase Your Traffic</h5>
+            <h4>Support and Tools</h4>
           </div>
           <div class="text-col-footer">
             <p>HubSpot Partners</p>
